// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <gui-title classname="mt-2 -ml-24 pr-2 absolute">
        Explore
      </gui-title>
      <gui-search-bar>
      </gui-search-bar>
      <div class="text-xs text-gray-500 mt-2 absolute border border-solid border-gray-200 rounded-bl-sm rounded-br-sm z-0 py-1 px-3 top-full right-0 w-auto text-right">
        Context: /path/to/project
      </div>
    </div>
  </div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;

exports[`render default 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <gui-title classname="mt-2 -ml-24 pr-2 absolute">
        Explore
      </gui-title>
      <gui-search-bar>
      </gui-search-bar>
    </div>
  </div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;
